@@ -23,7 +23,11 @@
 		<PackageReleaseNotes>Imported from ReleaseNotes.txt</PackageReleaseNotes>
 	</PropertyGroup>
 
-	<ItemGroup Label="Package References">
+	<ItemGroup Label="Package References NET 6.0" Condition="$(TargetFramework) == 'net6.0'">
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.12" />
+	</ItemGroup>
+
+	<ItemGroup Label="Package References NET 7.0" Condition="$(TargetFramework) == 'net7.0'">
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
 	</ItemGroup>
 
