@@ -23,7 +23,11 @@
 		<PackageReleaseNotes>Imported from ReleaseNotes.txt</PackageReleaseNotes>
 	</PropertyGroup>
 
-	<ItemGroup Label="Package References">
+	<ItemGroup Label="Package References NET 6.0" Condition="$(TargetFramework) == 'NET6.0'">
+		<PackageReference Include="System.Text.Json" Version="6.0.7" />
+	</ItemGroup>
+	
+	<ItemGroup Label="Package References NET 7.0" Condition="$(TargetFramework) == 'NET7.0'">
 		<PackageReference Include="System.Text.Json" Version="7.0.1" />
 	</ItemGroup>
 
