@@ -6,7 +6,13 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 
-	<ItemGroup Label="Package References">
+	<ItemGroup Label="Package References NET 6.0" Condition="$(TargetFramework) == 'net6.0'">
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.12">
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+	</ItemGroup>
+	
+	<ItemGroup Label="Package References NET 7.0" Condition="$(TargetFramework) == 'net7.0'">
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.1">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
